--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,60 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    ext.kotlin_version = '1.6.21'
+    /* Android tools version */
+    ext.build_tools_version = '7.3.1'
+    /* Google service */
+    ext.goolge_services_version = '4.3.10'
+    /* Crashlytics plugin */
+    ext.crashlytics_plugin_version = '2.9.2'
+    /* Hilt compiler */
+    ext.hilt_plugin_version = '2.40.1'
+    /* Protobuf compiler */
+    ext.protobuf_plugin_version = '0.8.12'
+
+    repositories {
+        mavenCentral()
+        google()
+        maven { url "https://jitpack.io" }
+        maven { url 'https://zendesk.jfrog.io/zendesk/repo' }
+        maven { url 'https://developer.huawei.com/repo/' }
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:$build_tools_version"
+        classpath "com.google.gms:google-services:$goolge_services_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:$crashlytics_plugin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_plugin_version"
+    }
+}
+
 plugins {
     id 'com.android.application' version '8.1.0-alpha03' apply false
     id 'com.android.library' version '8.1.0-alpha03' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
+}
+
+ext{
+    coroutines_version = '1.4.3'
+    // region /* Dependency injection */
+    /* Dagger core */
+    dagger_hilt_version = '2.37'
+    /* Dagger workers */
+    dagger_work_version = '1.0.0'
+
+    lifecycle_version = '2.4.0-alpha02'
+    lifecycle_ktx_version = '2.4.0-alpha02'
+
+    core_ktx_verion = '1.6.0'
+
+    activity_version = '1.3.0-rc02'
+    /* Fragment component */
+    fragment_version = '1.3.6'
+    /* Hilt compiler */
+    hilt_compiler_version = '1.0.0-beta01'
+    // endregion /* Dependency injection */
+
+    timber_version = '4.7.1'
+
 }
