--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,6 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
-    id 'com.google.firebase.crashlytics'
-    id 'com.google.gms.google-services'
 }
 
 android {
@@ -59,6 +57,8 @@ dependencies {
     /* Hilt compiler */
     kapt "com.google.dagger:hilt-compiler:$dagger_hilt_version"
     kapt "androidx.hilt:hilt-compiler:$hilt_compiler_version"
+
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
     implementation "com.jakewharton.timber:timber:$timber_version"
 
