--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
 
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.0"
+
+
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
